--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     {background-color: #383D58;}
     <header>
         <h1>Vai ser uma imagem aqui</h1>
         <ul>
-        <li>Estudante</li>
-        <li>Escola</li>
+        <li>Colegio Estadual Antônio Lacerda Braga</li>
+        <li>Fabio Davi Turko Castelo Branco</li>
         </ul>
         </header>
 </body>
