--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="style.css">
 </head>
 <header class="cabeçalho">
-<img src="img/MARCELO-LEVANTA-COPA-OKThumb.jpg" alt="imagem alura">
+<img src="img/fundo.jpg" alt="imagem alura">
     <ul class="cabeçalho-lista-item">
 <li>Adonis Amon</li>
 <li>Colégio Estadual Antônio Lacerda Braga</li>
